[gd_scene load_steps=5 format=3 uid="uid://dakpvgw68k3cb"]

[ext_resource type="Script" path="res://scripts/back_ground.gd" id="1_1ecpy"]
[ext_resource type="PackedScene" uid="uid://ddh5x7avsxbxy" path="res://component/back_ground_box.tscn" id="2_qo8ro"]
[ext_resource type="PackedScene" uid="uid://ch33bjbrtcwtn" path="res://component/back ground tiles/tile_one.tscn" id="2_qpn6p"]
[ext_resource type="PackedScene" uid="uid://bdkpu6o088rnw" path="res://component/line_detector.tscn" id="3_850a7"]

[node name="back_ground_line" type="Node2D"]
script = ExtResource("1_1ecpy")
tile_box = ExtResource("2_qo8ro")
tiles = Array[PackedScene]([ExtResource("2_qpn6p")])
first_spawn_position = 872

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="killer" parent="." instance=ExtResource("3_850a7")]
position = Vector2(38, 227)

[node name="spawner" parent="." instance=ExtResource("3_850a7")]
position = Vector2(719, 251)

[node name="sprite_line" type="Node2D" parent="."]
position = Vector2(172, 227)

[node name="back_ground_box" parent="sprite_line" instance=ExtResource("2_qo8ro")]
position = Vector2(37, -203)

[node name="tile_one" parent="sprite_line/back_ground_box" instance=ExtResource("2_qpn6p")]
position = Vector2(0, 36)

[node name="back_ground_box2" parent="sprite_line" instance=ExtResource("2_qo8ro")]
position = Vector2(454, -203)

[node name="tile_one" parent="sprite_line/back_ground_box2" instance=ExtResource("2_qpn6p")]
position = Vector2(0, 36)

[node name="Node2D" type="Node2D" parent="sprite_line"]
position = Vector2(872, -3)

[connection signal="area_entered" from="killer" to="." method="_on_killer_area_entered"]
[connection signal="area_entered" from="spawner" to="." method="_on_spawner_area_entered"]
